# play-langchain

./: README.md  pyproject.toml
cdk/: cdk.json  package.json  pnpm-lock.yaml
cdk/src/: app.ts
src/play_langchain/: __init__.py  __main__.py
