[project]
name = "play-langchain"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yamatatsu", email = "the.kinnikuman@gmail.com" }
]
dependencies = [
    "langchain>=0.3.8",
    "langchain-aws>=0.2.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"play-langchain" = "play_langchain:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/play_langchain"]
